Tried to Fix Spacing in Icon Section
The space between the text and related icon was too large; attempted to fix with padding but not sure if there is a better solution.

--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,8 @@ font-size: large;}
 .icon {display: flex;
 padding-top: 4rem;
 padding-bottom: 4rem;
-padding-left: 10%;
-padding-right: 10%;
+padding-left: 12%;
+padding-right: 12%;
 background-color: rgb(41, 41, 41);}
 
 .icon-text {color: whitesmoke;
@@ -53,9 +53,12 @@ text-align: left;}
 
 .column {float: left;
 display: flex;
+align-items: center;
 justify-content: space-between;
 width: 25%;
 padding: 2rem;
+padding-left: 3.5rem;
+padding-right: 3.5rem;
 word-wrap: normal;}
 
 .pre-grid {padding-top: 60px;
@@ -134,8 +137,7 @@ padding-right: 4rem;
 
 .blog-column{float:left;
 width:33.33%;
-padding:20px;
-position: relative;}
+padding:20px;}
 
 .blog-img{width: 100%;
 height: 18rem;
